cmake_minimum_required(VERSION 3.4)
project(hello_world)
add_definitions(-std=c++0x)
include_directories(formatter_ex_lib)
add_subdirectory(formatter_ex_lib)
add_executable(hello_world hello_world.cpp)
target_link_libraries(hello_world formatter_ex)
install(TARGETS hello_world DESTINATION bin)
set(CPACK_PACKAGE_NAME "solver")
set(CPACK_PACKAGE_VENDOR "Company_Name")
set(CPACK_PACKAGE_CONTACT "https://github.com/Rogopl")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "alf.ivan2002@gmail.com")
set(CPACK_PACKAGE_DESCRIPTION "some program")
#set(CPACK_GENERATOR "DragNDrop")
#set(CPACK_GENERATOR "DEB")
set(CPACK_GENERATOR "RPM" "DEB")
include(CPack)

